notebooks/oauth/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scipy-tls
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: scipy-tls
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: oauth-proxy
      port: 443
      protocol: TCP
      targetPort: oauth-proxy
  selector:
    statefulset: scipy
