notebooks/oauth/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: scipy
spec:
  to:
    kind: Service
    name: scipy-tls
    weight: 100
  port:
    targetPort: oauth-proxy
  tls:
    termination: Reencrypt
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
